--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Golf Atlas Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Leaflet (no integrity attrs to avoid blocking) -->
+  <!-- Leaflet (no SRI to avoid blocking) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
@@ -18,37 +18,86 @@
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
   <style>
-    :root {
-      --brand-green: #0e5135;
-      --brand-cream: #f9f7f2;
-      --text-dark: #1f2937;
-      --muted: #6b7280;
-      --link: #0ea5e9;
+    :root{
+      --brand-green:#0e5135;
+      --dark-bg:#0f172a;       /* slate-900 */
+      --dark-bg-2:#111827;     /* gray-900 */
+      --dark-text:#e5e7eb;     /* gray-200 */
+      --dark-muted:#94a3b8;    /* slate-400 */
+      --accent:#22c55e;        /* green-500 */
+      --warn:#f59e0b;          /* amber-500 */
+      --muted:#94a3b8;
+      --link:#38bdf8;
     }
-    html, body { height: 100%; margin: 0; color: var(--text-dark); background: #fff; font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans; }
-    #app { display: grid; grid-template-rows: auto 1fr; height: 100%; }
-    header { padding: 10px 14px; border-bottom: 1px solid #e5e7eb; display: flex; align-items: center; justify-content: space-between; gap: 10px; }
-    header .title { font-weight: 700; letter-spacing: .2px; color: var(--brand-green); }
-    header .meta { font-size: 12px; color: var(--muted); }
-    #map { width: 100%; height: calc(100vh - 56px); }
+    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans;background:#fff;color:#111827}
+    #app{display:grid;grid-template-rows:auto 1fr;height:100%}
+    header{padding:10px 14px;border-bottom:1px solid #e5e7eb;display:flex;align-items:center;justify-content:space-between;gap:10px}
+    header .title{font-weight:800;letter-spacing:.2px;color:var(--brand-green)}
+    header .meta{font-size:12px;color:#6b7280}
+    #map{width:100%;height:calc(100vh - 56px)}
 
-    .leaflet-popup-content-wrapper { background: #fff; color: var(--text-dark); border-radius: 12px; box-shadow: 0 10px 24px rgba(0,0,0,.15); border: 1px solid #e5e7eb; }
-    .leaflet-popup-content { margin: 0; }
-    .popup { padding: 12px 14px; max-width: 320px; }
-    .popup h3 { margin: 0 0 6px 0; font-size: 18px; line-height: 1.2; font-weight: 800; color: var(--brand-green); display: flex; align-items: center; gap: 8px; flex-wrap: wrap; }
-    .badge { font-size: 11px; padding: 2px 8px; border-radius: 999px; border: 1px solid #e5e7eb; color: #374151; background: #f9fafb; }
-    .badge.gold { color: #7c5e10; background: #fff7e6; border-color: #fde68a; }
-    .popup .sub { margin: 0 0 10px 0; font-size: 13px; color: #4b5563; }
-    .kv { width: 100%; border-collapse: collapse; font-size: 13px; }
-    .kv th { text-align: left; padding: 6px 8px 6px 0; color: #6b7280; font-weight: 600; white-space: nowrap; vertical-align: top; }
-    .kv td { padding: 6px 0; color: #111827; }
-    .kv tr + tr td, .kv tr + tr th { border-top: 1px dashed #e5e7eb; }
-    .muted { color: var(--muted); }
-    a { color: var(--link); text-decoration: none; } a:hover { text-decoration: underline; }
+    /* Dark popup look (restored) */
+    .leaflet-popup-content-wrapper{
+      background:linear-gradient(180deg,var(--dark-bg),var(--dark-bg-2));
+      color:var(--dark-text);
+      border-radius:14px;
+      box-shadow:0 14px 30px rgba(0,0,0,.35);
+      border:1px solid rgba(255,255,255,.06);
+    }
+    .leaflet-popup-tip{
+      background:var(--dark-bg-2);
+      border:1px solid rgba(255,255,255,.06);
+    }
+    .popup{padding:14px 16px;max-width:340px}
+    .popup h3{margin:0 0 8px 0;font-size:18px;line-height:1.2;font-weight:900;color:#f8fafc;display:flex;align-items:center;gap:8px;flex-wrap:wrap}
+    .popup h3 .emoji{filter:drop-shadow(0 1px 0 rgba(0,0,0,.3))}
+    .badge{font-size:11px;padding:2px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.16);color:#e5e7eb;background:rgba(255,255,255,.06)}
+    .badge.gold{color:#facc15;background:rgba(250,204,21,.12);border-color:rgba(250,204,21,.35)}
+    .popup .sub{margin:0 0 10px 0;font-size:13px;color:var(--dark-muted)}
+    .kv{width:100%;border-collapse:collapse;font-size:13px}
+    .kv th{text-align:left;padding:7px 10px 7px 0;color:var(--muted);font-weight:700;white-space:nowrap;vertical-align:top}
+    .kv td{padding:7px 0;color:#f1f5f9}
+    .kv tr + tr td, .kv tr + tr th{border-top:1px dashed rgba(255,255,255,.12)}
+    a{color:var(--link);text-decoration:none} a:hover{text-decoration:underline}
+    .pill-yes{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(34,197,94,.15);border:1px solid rgba(34,197,94,.4);color:#bbf7d0;font-weight:700}
+    .pill-no{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(148,163,184,.15);border:1px solid rgba(148,163,184,.35);color:#e2e8f0;font-weight:700}
 
     /* Debug panel */
-    #debug { position: fixed; bottom: 10px; left: 10px; background: rgba(255,255,255,.96); border: 1px solid #e5e7eb; border-radius: 10px; padding: 10px 12px; font-size: 12px; max-width: 42ch; box-shadow: 0 6px 16px rgba(0,0,0,.12); display: none; z-index: 9999; }
-    #debug pre { margin: 6px 0 0 0; white-space: pre-wrap; max-height: 25vh; overflow: auto; }
+    #debug{position:fixed;bottom:10px;left:10px;background:rgba(17,24,39,.96);border:1px solid rgba(255,255,255,.1);border-radius:10px;padding:10px 12px;font-size:12px;color:#e5e7eb;max-width:42ch;box-shadow:0 6px 16px rgba(0,0,0,.35);display:none;z-index:9999}
+    #debug pre{margin:6px 0 0 0;white-space:pre-wrap;max-height:25vh;overflow:auto}
+
+    /* Custom flag pin (DivIcon) */
+    .ga-flag-pin{
+      position:relative;
+      transform:translate(-12px,-36px); /* center-ish so tip is at the lat/lng */
+      width:24px;height:36px;
+      filter:drop-shadow(0 3px 6px rgba(0,0,0,.35));
+    }
+    .ga-flag-pin svg{display:block}
+    /* Cluster golf ball */
+    .ga-cluster{
+      position:relative;width:46px;height:46px;border-radius:50%;
+      display:flex;align-items:center;justify-content:center;
+      box-shadow:0 8px 18px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.9);
+      background: radial-gradient(circle at 30% 30%, #ffffff 0%, #f3f4f6 60%, #e5e7eb 100%);
+      border:1px solid rgba(0,0,0,.15);
+    }
+    .ga-cluster:before{
+      content:"";
+      position:absolute;inset:4px;border-radius:50%;
+      background:
+        radial-gradient(#d1d5db 1px, transparent 1px) 0 0/6px 6px,
+        radial-gradient(#cbd5e1 1px, transparent 1px) 3px 3px/6px 6px;
+      opacity:.65;
+      mix-blend-mode:multiply;
+    }
+    .ga-cluster-count{
+      position:absolute;bottom:-6px;right:-6px;
+      background:#0e5135;color:#fff;border-radius:999px;
+      font-size:12px;font-weight:900;line-height:1;
+      padding:6px 8px;border:2px solid #fff;
+      box-shadow:0 4px 10px rgba(0,0,0,.35);
+    }
   </style>
 </head>
 <body>
@@ -66,16 +115,17 @@
   </div>
 
   <script>
-    // ---- Debug helpers ----
+    /* =======================
+       Query + Debug helpers
+       ======================= */
     const qs = new URLSearchParams(location.search);
     const CSV_URL = qs.get('csv') || '';
     const DEBUG = qs.get('debug') === '1';
     const debugBox = () => document.getElementById('debug');
     const debugLog = () => document.getElementById('debugLog');
-
-    function log(...args) {
+    function log(...args){
       if (!DEBUG) return;
-      console.log('[DEBUG]', ...args);
+      console.log('[DEBUG]',...args);
       const el = debugLog();
       if (el) el.textContent += args.map(a => {
         try { return typeof a === 'string' ? a : JSON.stringify(a); }
@@ -83,16 +133,13 @@
       }).join(' ') + '\n';
     }
     if (DEBUG) debugBox().style.display = 'block';
-
-    // Catch runtime errors and show in debug box
-    window.addEventListener('error', (e) => {
-      log('JS error:', e.message, 'at', e.filename + ':' + e.lineno + ':' + e.colno);
-    });
-
+    window.addEventListener('error', e => log('JS error:', e.message, 'at', e.filename+':'+e.lineno+':'+e.colno));
     document.getElementById('meta').textContent = CSV_URL ? 'Data source: CSV param detected' : 'No CSV provided';
 
-    // ---- CSV helpers ----
-    function getLatLng(row) {
+    /* =======================
+       Data helpers
+       ======================= */
+    function getLatLng(row){
       const keys = Object.keys(row);
       const lookup = Object.fromEntries(keys.map(k => [k.toLowerCase(), k]));
       const latKey = ['lat','latitude','lat_dd'].find(k => lookup[k]);
@@ -100,122 +147,166 @@
       const lat = latKey ? parseFloat(row[lookup[latKey]]) : NaN;
       const lng = lngKey ? parseFloat(row[lookup[lngKey]]) : NaN;
       if (!isFinite(lat) || !isFinite(lng)) return null;
-      return [lat, lng];
+      return [lat,lng];
     }
-    function safeVal(row, key) {
-      const v = (row && row[key] != null) ? String(row[key]).trim() : '';
-      return v;
-    }
+    const safeVal = (row,key) => (row && row[key]!=null) ? String(row[key]).trim() : '';
 
-    function rowHTML(label, valueHTML) {
-      return `<tr><th>${label}</th><td>${valueHTML}</td></tr>`;
-    }
-    function linkHTML(url) {
-      try {
+    const yesNoPill = (val)=>{
+      const v = (val||'').toLowerCase();
+      if (v.startsWith('y')) return `<span class="pill-yes">Yes</span>`;
+      if (v.startsWith('n')) return `<span class="pill-no">No</span>`;
+      return safeText(val);
+    };
+    const safeText = (s)=> String(s)
+      .replaceAll('&','&amp;').replaceAll('<','&lt;')
+      .replaceAll('>','&gt;').replaceAll('"','&quot;').replaceAll("'",'&#39;');
+
+    function linkHTML(url){
+      try{
         const u = new URL(url);
-        const host = u.hostname.replace(/^www\./, '');
+        const host = u.hostname.replace(/^www\./,'');
         return `<a href="${u.href}" target="_blank" rel="noopener">Visit ${host}</a>`;
-      } catch { return escapeHTML(url); }
-    }
-    function escapeHTML(s) {
-      return String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;').replaceAll('"','&quot;').replaceAll("'",'&#39;');
+      }catch{return safeText(url);}
     }
 
-    // ---- Popup renderer (includes Stay & Play) ----
-    function renderPopup(row) {
+    /* =======================
+       Custom Icons (SVG)
+       ======================= */
+    function flagDivIcon(){
+      const svg = `
+        <svg width="24" height="36" viewBox="0 0 24 36" xmlns="http://www.w3.org/2000/svg">
+          <!-- pin body -->
+          <path d="M12 0 C7 0 3 4 3 9c0 7 9 18 9 18s9-11 9-18c0-5-4-9-9-9z" fill="#0e5135" stroke="white" stroke-width="1.2"/>
+          <!-- flag pole -->
+          <rect x="11.2" y="6" width="1.6" height="10" fill="#e5e7eb"/>
+          <!-- flag -->
+          <path d="M12.8 6 L20 8.8 L12.8 11.6 Z" fill="#f43f5e"/>
+          <!-- golf hole shadow -->
+          <ellipse cx="12" cy="33.5" rx="6.5" ry="2.5" fill="rgba(0,0,0,.25)"/>
+        </svg>`;
+      return L.divIcon({
+        className:'ga-flag-pin',
+        html:svg,
+        iconSize:[24,36],
+        iconAnchor:[12,36], // tip points to location
+        popupAnchor:[0,-34]
+      });
+    }
+
+    function clusterIconCreateFunction(cluster){
+      const count = cluster.getChildCount();
+      return L.divIcon({
+        html: `
+          <div class="ga-cluster">
+            <div class="ga-cluster-count">${count}</div>
+          </div>
+        `,
+        className:'ga-cluster-wrap',
+        iconSize:[46,46]
+      });
+    }
+
+    /* =======================
+       Popup renderer (DARK + emojis)
+       ======================= */
+    function renderPopup(row){
       const title = safeVal(row,'course') || safeVal(row,'name') || 'Course';
       const city = safeVal(row,'city');
       const state = safeVal(row,'state') || safeVal(row,'st');
-      const cost = safeVal(row,'cost_per_course(green_fee_range_)');
-      const stayPlay = safeVal(row,'stay_and_play(yes_no)'); // NEW field
-      const lodgingYN = safeVal(row,'lodging_on-site(yes_no)');
-      const lodgingNotes = safeVal(row,'lodging_details');
+
+      const cost   = safeVal(row,'cost_per_course(green_fee_range_)');
+      const stay   = safeVal(row,'stay_and_play(yes_no)');     // NEW
+      const lodgeY = safeVal(row,'lodging_on-site(yes_no)');
+      const lodgeN = safeVal(row,'lodging_details');
       const season = safeVal(row,'peak_season/best_time_to_visit');
       const top100 = safeVal(row,'top_100_ranking');
-      const par = safeVal(row,'par');
-      const yard = safeVal(row,'yardage(black_tees)');
-      const arch = safeVal(row,'architect');
-      const website = safeVal(row,'website') || safeVal(row,'url');
+      const par    = safeVal(row,'par');
+      const yard   = safeVal(row,'yardage(black_tees)');
+      const arch   = safeVal(row,'architect');
+      const website= safeVal(row,'website') || safeVal(row,'url');
 
-      const headerBadges = [];
-      if (top100) headerBadges.push(`<span class="badge gold">Top 100: ${escapeHTML(top100)}</span>`);
-      if (par) headerBadges.push(`<span class="badge">Par ${escapeHTML(par)}</span>`);
-      if (yard) headerBadges.push(`<span class="badge">${escapeHTML(yard)} yds</span>`);
+      const badges = [];
+      if (top100) badges.push(`<span class="badge gold">🏆 Top 100: ${safeText(top100)}</span>`);
+      if (par)    badges.push(`<span class="badge">Par ${safeText(par)}</span>`);
+      if (yard)   badges.push(`<span class="badge">${safeText(yard)} yds</span>`);
 
-      const subline = [city, state].filter(Boolean).join(', ');
+      const subline = [city,state].filter(Boolean).join(', ');
       const rows = [];
-      if (cost) rows.push(rowHTML('Cost', escapeHTML(cost)));
-      if (stayPlay) rows.push(rowHTML('Stay &amp; Play', escapeHTML(stayPlay)));
-      if (lodgingYN) rows.push(rowHTML('On-site Lodging', escapeHTML(lodgingYN)));
-      if (lodgingNotes) rows.push(rowHTML('Lodging Notes', escapeHTML(lodgingNotes)));
-      if (season) rows.push(rowHTML('Best Season', escapeHTML(season)));
-      if (arch) rows.push(rowHTML('Architect', escapeHTML(arch)));
-      if (website) rows.push(rowHTML('Website', linkHTML(website)));
-      if (rows.length === 0) rows.push(`<tr><td colspan="2" class="muted">No extra details yet.</td></tr>`);
+
+      if (cost)   rows.push(rowHTML('💵 Cost', safeText(cost)));
+      if (stay)   rows.push(rowHTML('🛌 Stay & Play', yesNoPill(stay)));
+      if (lodgeY) rows.push(rowHTML('🏨 On-site Lodging', yesNoPill(lodgeY)));
+      if (lodgeN) rows.push(rowHTML('📝 Lodging Notes', safeText(lodgeN)));
+      if (season) rows.push(rowHTML('🗓️ Best Season', safeText(season)));
+      if (arch)   rows.push(rowHTML('🏗️ Architect', safeText(arch)));
+      if (website)rows.push(rowHTML('🔗 Website', linkHTML(website)));
+      if (!rows.length) rows.push(`<tr><td colspan="2" class="muted">No extra details yet.</td></tr>`);
 
       return `
         <div class="popup">
-          <h3>${escapeHTML(title)} ${headerBadges.join(' ')}</h3>
-          ${subline ? `<p class="sub">${escapeHTML(subline)}</p>` : ''}
+          <h3><span class="emoji">⛳</span> ${safeText(title)} ${badges.join(' ')}</h3>
+          ${subline ? `<p class="sub">${safeText(subline)}</p>` : ''}
           <table class="kv" role="table"><tbody>${rows.join('')}</tbody></table>
-        </div>`;
+        </div>
+      `;
     }
+    function rowHTML(label, valueHTML){ return `<tr><th>${label}</th><td>${valueHTML}</td></tr>`; }
 
-    // ---- Map init ----
-    const map = L.map('map', { zoomControl: true });
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> &copy; <a href="https://carto.com/attributions">CARTO</a>'
+    /* =======================
+       Map init
+       ======================= */
+    const map = L.map('map',{zoomControl:true});
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png',{
+      attribution:'&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> &copy; <a href="https://carto.com/attributions">CARTO</a>'
     }).addTo(map);
 
-    const CONUS_BOUNDS = L.latLngBounds([24.5, -125.0], [49.6, -66.9]);
-    map.fitBounds(CONUS_BOUNDS, { padding: [20, 20] });
+    const CONUS_BOUNDS = L.latLngBounds([24.5,-125.0],[49.6,-66.9]);
+    map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
 
+    // Cluster group with golf-ball clusters
     const cluster = L.markerClusterGroup({
-      showCoverageOnHover: false,
-      spiderfyOnEveryZoom: false,
-      maxClusterRadius: 45
+      showCoverageOnHover:false,
+      spiderfyOnEveryZoom:false,
+      maxClusterRadius:45,
+      iconCreateFunction: clusterIconCreateFunction
     }).addTo(map);
 
-    // ---- Load CSV & plot ----
-    (function init() {
-      if (!CSV_URL) { log('No CSV URL supplied. Add ?csv=<published CSV URL>'); return; }
+    /* =======================
+       Load CSV & plot
+       ======================= */
+    (function init(){
+      if(!CSV_URL){ log('No CSV URL supplied. Add ?csv=<published CSV URL>'); return; }
       log('Fetching CSV from', CSV_URL);
-      Papa.parse(CSV_URL, {
-        download: true,
-        header: true,
-        dynamicTyping: false,
-        skipEmptyLines: true,
-        complete: (results) => {
+      Papa.parse(CSV_URL,{
+        download:true, header:true, dynamicTyping:false, skipEmptyLines:true,
+        complete: (results)=>{
           const rows = results.data || [];
           log('Parsed rows:', rows.length);
           plotRows(rows);
         },
-        error: (err) => {
-          console.error('CSV parse error:', err);
-          log('CSV parse error:', String(err));
-        }
+        error: (err)=>{ console.error('CSV parse error:',err); log('CSV parse error:', String(err)); }
       });
     })();
 
-    function plotRows(rows) {
+    function plotRows(rows){
       const bounds = L.latLngBounds([]);
       let plotted = 0;
 
-      rows.forEach((row, idx) => {
+      rows.forEach((row, idx)=>{
         const latlng = getLatLng(row);
-        if (!latlng) { log(`Row ${idx} missing/invalid lat/lng`, row); return; }
+        if(!latlng){ log(`Row ${idx} missing/invalid lat/lng`, row); return; }
 
-        const popup = renderPopup(row);
-        const marker = L.marker(latlng, { title: safeVal(row,'course') || safeVal(row,'name') || 'Course' });
-        marker.bindPopup(popup, { maxWidth: 340 });
+        const marker = L.marker(latlng, {
+          title: safeVal(row,'course') || safeVal(row,'name') || 'Course',
+          icon: flagDivIcon()  // ⛳ custom flag pin restored
+        });
+        marker.bindPopup(renderPopup(row), {maxWidth:360});
         cluster.addLayer(marker);
         bounds.extend(latlng);
         plotted++;
       });
 
-      if (plotted > 0) map.fitBounds(bounds.pad(0.08));
-      else map.fitBounds(CONUS_BOUNDS, { padding: [20, 20] });
-
+      if (plotted>0) map.fitBounds(bounds.pad(0.08)); else map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
       log('Markers plotted:', plotted);
     }
   </script>
