--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Golf Atlas Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Leaflet (no SRI to avoid blocking) -->
+  <!-- Leaflet (no SRI) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
@@ -14,90 +14,76 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-  <!-- PapaParse for CSV -->
+  <!-- PapaParse -->
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
   <style>
     :root{
       --brand-green:#0e5135;
-      --dark-bg:#0f172a;       /* slate-900 */
-      --dark-bg-2:#111827;     /* gray-900 */
-      --dark-text:#e5e7eb;     /* gray-200 */
-      --dark-muted:#94a3b8;    /* slate-400 */
-      --accent:#22c55e;        /* green-500 */
-      --warn:#f59e0b;          /* amber-500 */
+      --dark-1:#0f172a; /* slate-900 */
+      --dark-2:#111827; /* gray-900 */
+      --text-strong:#f8fafc;
+      --text:#e5e7eb;
       --muted:#94a3b8;
       --link:#38bdf8;
     }
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans;background:#fff;color:#111827}
     #app{display:grid;grid-template-rows:auto 1fr;height:100%}
     header{padding:10px 14px;border-bottom:1px solid #e5e7eb;display:flex;align-items:center;justify-content:space-between;gap:10px}
-    header .title{font-weight:800;letter-spacing:.2px;color:var(--brand-green)}
-    header .meta{font-size:12px;color:#6b7280}
+    .title{font-weight:800;letter-spacing:.2px;color:var(--brand-green)}
+    .meta{font-size:12px;color:#6b7280}
     #map{width:100%;height:calc(100vh - 56px)}
 
-    /* Dark popup look (restored) */
+    /* Dark popup style (restored) */
     .leaflet-popup-content-wrapper{
-      background:linear-gradient(180deg,var(--dark-bg),var(--dark-bg-2));
-      color:var(--dark-text);
+      background:linear-gradient(180deg,var(--dark-1),var(--dark-2));
+      color:var(--text);
       border-radius:14px;
+      border:1px solid rgba(255,255,255,.08);
       box-shadow:0 14px 30px rgba(0,0,0,.35);
-      border:1px solid rgba(255,255,255,.06);
     }
-    .leaflet-popup-tip{
-      background:var(--dark-bg-2);
-      border:1px solid rgba(255,255,255,.06);
-    }
-    .popup{padding:14px 16px;max-width:340px}
-    .popup h3{margin:0 0 8px 0;font-size:18px;line-height:1.2;font-weight:900;color:#f8fafc;display:flex;align-items:center;gap:8px;flex-wrap:wrap}
-    .popup h3 .emoji{filter:drop-shadow(0 1px 0 rgba(0,0,0,.3))}
-    .badge{font-size:11px;padding:2px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.16);color:#e5e7eb;background:rgba(255,255,255,.06)}
-    .badge.gold{color:#facc15;background:rgba(250,204,21,.12);border-color:rgba(250,204,21,.35)}
-    .popup .sub{margin:0 0 10px 0;font-size:13px;color:var(--dark-muted)}
+    .leaflet-popup-tip{background:var(--dark-2);border:1px solid rgba(255,255,255,.08)}
+    .popup{padding:14px 16px;max-width:360px}
+    .popup h3{margin:0 0 8px 0;font-size:18px;line-height:1.2;font-weight:900;color:var(--text-strong);display:flex;align-items:center;gap:8px;flex-wrap:wrap}
+    .badge{font-size:11px;padding:2px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.18);color:#fef9c3;background:rgba(250,204,21,.12)}
+    .sub{margin:0 0 10px 0;font-size:13px;color:var(--muted)}
+
     .kv{width:100%;border-collapse:collapse;font-size:13px}
-    .kv th{text-align:left;padding:7px 10px 7px 0;color:var(--muted);font-weight:700;white-space:nowrap;vertical-align:top}
-    .kv td{padding:7px 0;color:#f1f5f9}
+    .kv th{text-align:left;padding:7px 10px 7px 0;color:#cbd5e1;font-weight:700;white-space:nowrap;vertical-align:top}
+    .kv td{padding:7px 0;color:#e5e7eb}
     .kv tr + tr td, .kv tr + tr th{border-top:1px dashed rgba(255,255,255,.12)}
+
     a{color:var(--link);text-decoration:none} a:hover{text-decoration:underline}
-    .pill-yes{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(34,197,94,.15);border:1px solid rgba(34,197,94,.4);color:#bbf7d0;font-weight:700}
-    .pill-no{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(148,163,184,.15);border:1px solid rgba(148,163,184,.35);color:#e2e8f0;font-weight:700}
+    .pill-yes{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(34,197,94,.18);border:1px solid rgba(34,197,94,.45);color:#bbf7d0;font-weight:800}
+    .pill-no{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(148,163,184,.18);border:1px solid rgba(148,163,184,.4);color:#e2e8f0;font-weight:800}
 
     /* Debug panel */
     #debug{position:fixed;bottom:10px;left:10px;background:rgba(17,24,39,.96);border:1px solid rgba(255,255,255,.1);border-radius:10px;padding:10px 12px;font-size:12px;color:#e5e7eb;max-width:42ch;box-shadow:0 6px 16px rgba(0,0,0,.35);display:none;z-index:9999}
     #debug pre{margin:6px 0 0 0;white-space:pre-wrap;max-height:25vh;overflow:auto}
 
-    /* Custom flag pin (DivIcon) */
-    .ga-flag-pin{
-      position:relative;
-      transform:translate(-12px,-36px); /* center-ish so tip is at the lat/lng */
-      width:24px;height:36px;
-      filter:drop-shadow(0 3px 6px rgba(0,0,0,.35));
-    }
+    /* Custom flag pin */
+    .ga-flag-pin{position:relative;transform:translate(-12px,-36px);width:24px;height:36px;filter:drop-shadow(0 3px 6px rgba(0,0,0,.35))}
     .ga-flag-pin svg{display:block}
-    /* Cluster golf ball */
-    .ga-cluster{
-      position:relative;width:46px;height:46px;border-radius:50%;
+
+    /* Small golf-ball cluster with centered count */
+    .ga-cluster-ball{
+      width:34px;height:34px;border-radius:50%;
+      background:radial-gradient(circle at 30% 30%, #ffffff 0%, #f3f4f6 60%, #e5e7eb 100%);
+      border:1px solid rgba(0,0,0,.18);
+      box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.9);
+      position:relative;
       display:flex;align-items:center;justify-content:center;
-      box-shadow:0 8px 18px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.9);
-      background: radial-gradient(circle at 30% 30%, #ffffff 0%, #f3f4f6 60%, #e5e7eb 100%);
-      border:1px solid rgba(0,0,0,.15);
+      font-weight:900;color:#0f172a; /* dark text on light ball */
     }
-    .ga-cluster:before{
+    .ga-cluster-ball:before{
       content:"";
       position:absolute;inset:4px;border-radius:50%;
       background:
         radial-gradient(#d1d5db 1px, transparent 1px) 0 0/6px 6px,
         radial-gradient(#cbd5e1 1px, transparent 1px) 3px 3px/6px 6px;
-      opacity:.65;
-      mix-blend-mode:multiply;
+      opacity:.65;mix-blend-mode:multiply;
     }
-    .ga-cluster-count{
-      position:absolute;bottom:-6px;right:-6px;
-      background:#0e5135;color:#fff;border-radius:999px;
-      font-size:12px;font-weight:900;line-height:1;
-      padding:6px 8px;border:2px solid #fff;
-      box-shadow:0 4px 10px rgba(0,0,0,.35);
-    }
+    .ga-cluster-wrap{filter:drop-shadow(0 3px 6px rgba(0,0,0,.35))}
   </style>
 </head>
 <body>
@@ -124,15 +110,14 @@
     const debugBox = () => document.getElementById('debug');
     const debugLog = () => document.getElementById('debugLog');
     function log(...args){
-      if (!DEBUG) return;
+      if(!DEBUG) return;
       console.log('[DEBUG]',...args);
       const el = debugLog();
-      if (el) el.textContent += args.map(a => {
-        try { return typeof a === 'string' ? a : JSON.stringify(a); }
-        catch { return String(a); }
+      if(el) el.textContent += args.map(a=>{
+        try{return typeof a==='string'?a:JSON.stringify(a);}catch{return String(a);}
       }).join(' ') + '\n';
     }
-    if (DEBUG) debugBox().style.display = 'block';
+    if(DEBUG) debugBox().style.display='block';
     window.addEventListener('error', e => log('JS error:', e.message, 'at', e.filename+':'+e.lineno+':'+e.colno));
     document.getElementById('meta').textContent = CSV_URL ? 'Data source: CSV param detected' : 'No CSV provided';
 
@@ -146,31 +131,22 @@
       const lngKey = ['lng','lon','long','longitude','lng_dd','lon_dd'].find(k => lookup[k]);
       const lat = latKey ? parseFloat(row[lookup[latKey]]) : NaN;
       const lng = lngKey ? parseFloat(row[lookup[lngKey]]) : NaN;
-      if (!isFinite(lat) || !isFinite(lng)) return null;
+      if(!isFinite(lat) || !isFinite(lng)) return null;
       return [lat,lng];
     }
-    const safeVal = (row,key) => (row && row[key]!=null) ? String(row[key]).trim() : '';
-
+    const V = (row,key)=> (row && row[key]!=null) ? String(row[key]).trim() : '';
+    const safe = (s)=> String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;').replaceAll('"','&quot;').replaceAll("'",'&#39;');
     const yesNoPill = (val)=>{
-      const v = (val||'').toLowerCase();
-      if (v.startsWith('y')) return `<span class="pill-yes">Yes</span>`;
-      if (v.startsWith('n')) return `<span class="pill-no">No</span>`;
-      return safeText(val);
+      const v=(val||'').toLowerCase();
+      if(v.startsWith('y')) return `<span class="pill-yes">Yes</span>`;
+      if(v.startsWith('n')) return `<span class="pill-no">No</span>`;
+      return safe(val);
     };
-    const safeText = (s)=> String(s)
-      .replaceAll('&','&amp;').replaceAll('<','&lt;')
-      .replaceAll('>','&gt;').replaceAll('"','&quot;').replaceAll("'",'&#39;');
-
-    function linkHTML(url){
-      try{
-        const u = new URL(url);
-        const host = u.hostname.replace(/^www\./,'');
-        return `<a href="${u.href}" target="_blank" rel="noopener">Visit ${host}</a>`;
-      }catch{return safeText(url);}
-    }
+    const linkHTML=(url)=>{ try{ const u=new URL(url); const host=u.hostname.replace(/^www\./,''); return `<a href="${u.href}" target="_blank" rel="noopener">Visit ${host}</a>`; }catch{return safe(url);} };
+    const rowHTML=(label,html)=> `<tr><th>${label}</th><td>${html}</td></tr>`;
 
     /* =======================
-       Custom Icons (SVG)
+       Custom Icons
        ======================= */
     function flagDivIcon(){
       const svg = `
@@ -181,76 +157,80 @@
           <rect x="11.2" y="6" width="1.6" height="10" fill="#e5e7eb"/>
           <!-- flag -->
           <path d="M12.8 6 L20 8.8 L12.8 11.6 Z" fill="#f43f5e"/>
-          <!-- golf hole shadow -->
+          <!-- shadow -->
           <ellipse cx="12" cy="33.5" rx="6.5" ry="2.5" fill="rgba(0,0,0,.25)"/>
         </svg>`;
       return L.divIcon({
         className:'ga-flag-pin',
         html:svg,
         iconSize:[24,36],
-        iconAnchor:[12,36], // tip points to location
+        iconAnchor:[12,36],
         popupAnchor:[0,-34]
       });
     }
 
+    // Small centered-count golf ball
     function clusterIconCreateFunction(cluster){
       const count = cluster.getChildCount();
       return L.divIcon({
-        html: `
-          <div class="ga-cluster">
-            <div class="ga-cluster-count">${count}</div>
-          </div>
-        `,
+        html: `<div class="ga-cluster-ball">${count}</div>`,
         className:'ga-cluster-wrap',
-        iconSize:[46,46]
+        iconSize:[34,34]
       });
     }
 
     /* =======================
-       Popup renderer (DARK + emojis)
+       Popup renderer (DARK + emojis) — includes all key fields
        ======================= */
     function renderPopup(row){
-      const title = safeVal(row,'course') || safeVal(row,'name') || 'Course';
-      const city = safeVal(row,'city');
-      const state = safeVal(row,'state') || safeVal(row,'st');
-
-      const cost   = safeVal(row,'cost_per_course(green_fee_range_)');
-      const stay   = safeVal(row,'stay_and_play(yes_no)');     // NEW
-      const lodgeY = safeVal(row,'lodging_on-site(yes_no)');
-      const lodgeN = safeVal(row,'lodging_details');
-      const season = safeVal(row,'peak_season/best_time_to_visit');
-      const top100 = safeVal(row,'top_100_ranking');
-      const par    = safeVal(row,'par');
-      const yard   = safeVal(row,'yardage(black_tees)');
-      const arch   = safeVal(row,'architect');
-      const website= safeVal(row,'website') || safeVal(row,'url');
-
-      const badges = [];
-      if (top100) badges.push(`<span class="badge gold">🏆 Top 100: ${safeText(top100)}</span>`);
-      if (par)    badges.push(`<span class="badge">Par ${safeText(par)}</span>`);
-      if (yard)   badges.push(`<span class="badge">${safeText(yard)} yds</span>`);
-
+      // Title always shows (fallback prevents “missing name”)
+      const title = V(row,'course') || V(row,'name') || V(row,'Course') || '⛳ Course';
+      const city  = V(row,'city');
+      const state = V(row,'state') || V(row,'st') || V(row,'State');
       const subline = [city,state].filter(Boolean).join(', ');
-      const rows = [];
 
-      if (cost)   rows.push(rowHTML('💵 Cost', safeText(cost)));
+      // Data fields
+      const top100 = V(row,'top_100_ranking');
+      const par    = V(row,'par');
+      const yard   = V(row,'yardage(black_tees)');
+      const arch   = V(row,'architect');
+      const cost   = V(row,'cost_per_course(green_fee_range_)');
+      const stay   = V(row,'stay_and_play(yes_no)');          // NEW
+      const lodgeY = V(row,'lodging_on-site(yes_no)');
+      const lodgeN = V(row,'lodging_details');
+      const season = V(row,'peak_season/best_time_to_visit');
+      const region = V(row,'region') || V(row,'Region');
+      const phone  = V(row,'phone') || V(row,'Phone');
+      const site   = V(row,'website') || V(row,'url') || V(row,'Website') || V(row,'URL');
+      const booking= V(row,'booking_url') || V(row,'Booking');
+
+      // Badges row (Top 100 + Par + Yardage)
+      const badges = [];
+      if (top100) badges.push(`<span class="badge">🏆 Top 100: ${safe(top100)}</span>`);
+      if (par)    badges.push(`<span class="badge">Par ${safe(par)}</span>`);
+      if (yard)   badges.push(`<span class="badge">${safe(yard)} yds</span>`);
+
+      const rows = [];
+      if (region) rows.push(rowHTML('🗺️ Region', safe(region)));
+      if (cost)   rows.push(rowHTML('💵 Cost', safe(cost)));
       if (stay)   rows.push(rowHTML('🛌 Stay & Play', yesNoPill(stay)));
       if (lodgeY) rows.push(rowHTML('🏨 On-site Lodging', yesNoPill(lodgeY)));
-      if (lodgeN) rows.push(rowHTML('📝 Lodging Notes', safeText(lodgeN)));
-      if (season) rows.push(rowHTML('🗓️ Best Season', safeText(season)));
-      if (arch)   rows.push(rowHTML('🏗️ Architect', safeText(arch)));
-      if (website)rows.push(rowHTML('🔗 Website', linkHTML(website)));
-      if (!rows.length) rows.push(`<tr><td colspan="2" class="muted">No extra details yet.</td></tr>`);
+      if (lodgeN) rows.push(rowHTML('📝 Lodging Notes', safe(lodgeN)));
+      if (season) rows.push(rowHTML('📆 Best Season', safe(season)));
+      if (arch)   rows.push(rowHTML('🏗️ Architect', safe(arch)));
+      if (phone)  rows.push(rowHTML('📞 Phone', safe(phone)));
+      if (site)   rows.push(rowHTML('🔗 Website', linkHTML(site)));
+      if (booking)rows.push(rowHTML('🧾 Booking', linkHTML(booking)));
+      if (!rows.length) rows.push(`<tr><td colspan="2" class="sub">No extra details yet.</td></tr>`);
 
       return `
         <div class="popup">
-          <h3><span class="emoji">⛳</span> ${safeText(title)} ${badges.join(' ')}</h3>
-          ${subline ? `<p class="sub">${safeText(subline)}</p>` : ''}
+          <h3>⛳ ${safe(title)} ${badges.join(' ')}</h3>
+          ${subline ? `<p class="sub">${safe(subline)}</p>` : ''}
           <table class="kv" role="table"><tbody>${rows.join('')}</tbody></table>
         </div>
       `;
     }
-    function rowHTML(label, valueHTML){ return `<tr><th>${label}</th><td>${valueHTML}</td></tr>`; }
 
     /* =======================
        Map init
@@ -263,7 +243,7 @@
     const CONUS_BOUNDS = L.latLngBounds([24.5,-125.0],[49.6,-66.9]);
     map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
 
-    // Cluster group with golf-ball clusters
+    // Cluster group using small golf ball
     const cluster = L.markerClusterGroup({
       showCoverageOnHover:false,
       spiderfyOnEveryZoom:false,
@@ -279,12 +259,12 @@
       log('Fetching CSV from', CSV_URL);
       Papa.parse(CSV_URL,{
         download:true, header:true, dynamicTyping:false, skipEmptyLines:true,
-        complete: (results)=>{
+        complete:(results)=>{
           const rows = results.data || [];
           log('Parsed rows:', rows.length);
           plotRows(rows);
         },
-        error: (err)=>{ console.error('CSV parse error:',err); log('CSV parse error:', String(err)); }
+        error:(err)=>{ console.error('CSV parse error:',err); log('CSV parse error:', String(err)); }
       });
     })();
 
@@ -297,16 +277,18 @@
         if(!latlng){ log(`Row ${idx} missing/invalid lat/lng`, row); return; }
 
         const marker = L.marker(latlng, {
-          title: safeVal(row,'course') || safeVal(row,'name') || 'Course',
-          icon: flagDivIcon()  // ⛳ custom flag pin restored
+          title: V(row,'course') || V(row,'name') || 'Course',
+          icon: flagDivIcon() // keep the golf-flag pins
         });
-        marker.bindPopup(renderPopup(row), {maxWidth:360});
+        marker.bindPopup(renderPopup(row), {maxWidth:380});
         cluster.addLayer(marker);
         bounds.extend(latlng);
         plotted++;
       });
 
-      if (plotted>0) map.fitBounds(bounds.pad(0.08)); else map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
+      if(plotted>0) map.fitBounds(bounds.pad(0.08));
+      else map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
+
       log('Markers plotted:', plotted);
     }
   </script>
